--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "swiper": "^7.3.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
