--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^6.1.1",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-config": "^5.0.3",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
