--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.0",
+    "colors": "^1.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon src/index.ts"
   },
