--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.0",
         "colors": "^1.4.0",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "mongoose": "^6.1.2",
