create api signup

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://testBoy:hieu123@cluster0.ydx2s.mongodb.net/shopee-clone?retryWrites=true&w=majority
+JWT_SECRET = 'shopeeclone' 
