login with gg fb

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,9 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://testBoy:hieu123@cluster0.ydx2s.mongodb.net/shopee-clone?retryWrites=true&w=majority
 JWT_SECRET = 'shopeeclone' 
+CLIENT_URL = 'http://localhost:3000/'
+GOOGLE_CLIENT_ID = 435548077713-e3ucpctn2c3tes7rfg3vgi86l6lpv4sb.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+FACEBOOK_CLIENT_ID = 2151942321626799
+FACEBOOK_CLIENT_SECRET = e3c3d3bb2b91149e0e822af93fb6456e
+COOKIE_SECRET = 'shopee'
