--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,6 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
-        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.0",
         "bcryptjs": "^2.4.3",
@@ -30,5 +29,8 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "@types/cors": "^2.8.12"
+    }
 }
