--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
