--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "@types/node": "^17.0.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -30,6 +29,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {}
+  "license": "ISC"
 }
