--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-redux": "^7.2.6",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-facebook-login": "^4.1.4",
     "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.3.2"
   }
