--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
+    "firebase": "^9.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.1",
