--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
+    "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.4",
     "react": "^17.0.2",
